src/iogame/client/css/main.css
html, body {
    /* margin: 0;*/
    /*padding: 0;*/
  /*overflow: hidden;
  overscroll-behavior: none;*/
  background-color: black;
  background-color : darkgrey;
/*  margin:0px;*/
}

hr {
  width: 100%;
}

button {
  font-size: 18px;
  outline: none;
  border: none;
  color: black;
  background-color: transparent;
  padding: 5px 20px;
  border-radius: 3px;
  transition: background-color 0.2s ease;
}

button:hover {
  background-color: rgb(230, 230, 230);
}

button:focus {
  outline: none;
}

.hidden {
  display: none !important;
} canvas.game {
          display: block;
          width:100%;
          height:100%;
}
canvas {
    display : none;
    /* visibility: collapse; */
    /* margin : 5px; */
}
#play-menu {
/*  position: fixed;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
*/
  padding: 20px 30px;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 5px;
  text-align: center;
}

#play-menu p {
  margin-bottom: 0;
}

#play-menu input {
  font-size: 18px;
  outline: none;
  border: none;
  border-bottom: 1px solid black;
  margin-bottom: 5px;
  padding: 3px;
  text-align: center;
}

#play-menu input:hover {
  outline: none;
}

#leaderboard {
  position: fixed;
  top: 10px;
  right: 10px;
  background-color: rgba(255, 255, 255, 0.5);
  padding: 10px;
  border-radius: 5px;
}

#leaderboard th {
  text-align: center;
  padding: 2px 5px;
}

#leaderboard td {
  text-align: center;
  padding: 2px 5px;
}

#disconnect-modal {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.75);
}

#disconnect-modal > div {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  padding: 15px 20px;
  background-color: white;
  border-radius: 5px;
  text-align: center;
}

@media screen and (max-width: 640px) {
  h1 {
    font-size: 2rem;
  }

  h2 {
    font-size: 1.75rem;
  }

  #play-menu {
    padding: 10px 15px;
    min-width: 280px;
  }

  #disconnect-modal > div {
    padding: 10px;
    min-width: 280px;
  }

  #leaderboard th {
    padding: 0 3px;
  }

  #leaderboard td {
    padding: 0 3px;
  }

  #leaderboard table {
    font-size: 14px;
  }
}
#not-joined-reason {
    color : red;
}
.keyboardmapping {
    font-family : mono;
}
.active-remapping {
    font-weight : bold;
}

